# archelon

./: CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
archelon/: README.md
archelon-cli/: Cargo.toml  README.md
archelon-cli/src/: main.rs
archelon-cli/src/commands/: cache.rs  entry.rs  mod.rs
archelon-core/: Cargo.toml  README.md
archelon-core/src/: cache.rs  emoji.rs  entry.rs  entry_ref.rs  error.rs  journal.rs  lib.rs  ops.rs  parser.rs
archelon-mcp/: Cargo.toml  README.md
archelon-mcp/src/: main.rs
archelon-vscode/: CHANGELOG.md  package.json
archelon-vscode/src/: cli.ts  entryTreeProvider.ts  extension.ts
archelon/src/commands/: entry.rs  mcp.rs
