[package]
name = "archelon-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
caretta-id = "0.11.0-rc.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
